--- a/css/app.css
+++ b/css/app.css
@@ -5,6 +5,10 @@ html, body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 
 }
+
+#results{
+	font-size:8px;
+}
 .container-fluid{
 	margin-left: 5%;
 	margin-right:5%;
