--- a/css/app.css
+++ b/css/app.css
@@ -18,6 +18,18 @@ html, body {
 	margin-left:63px;
 }
 
+#clear{
+	position:relative;
+	float:right;
+	cursor: pointer;
+	font-size: 0.75rem;
+	color: #d64f4f;
+}
+
+#clear:hover{
+	color:#aaa;
+}
+
 .container-fluid{
 	margin-left: 5%;
 	margin-right:5%;
