--- a/css/app.css
+++ b/css/app.css
@@ -12,7 +12,7 @@ html, body {
 #dropyear{
 	position: absolute;
 	z-index:2;
-	left:28%;
+	left:25%;
 }
 #dropcompactness{
 	margin-left:63px;
@@ -242,15 +242,33 @@ ul.election-navigation li{
   top: 70px;
   width: 25%;
 }
+
+
+.affix-container.affix-bottom {
+	position: absolute;
+  /*left:5px;*/
+  margin-top: 0;
+  /*width: 25%;*/
+}
 .mapboxgl-ctrl-top-right.affix {
   position: fixed;
   top: 80px;
   right:5%;
+}
 
+#legend.affix{
+  position: fixed;
+  top: 90px;
+  right:calc(5% + 50px);
 }
 
 .affix-container.affix > .sidebar{
 
+  width: 90%;
+}
+
+.affix-container.affix-bottom > .sidebar{
+  padding: 0 15px 10px 0;
   width: 80%;
 }
 
